--- a/web/view/leiaute.twig
+++ b/web/view/leiaute.twig
@@ -57,16 +57,16 @@
             <div class="collapse navbar-collapse" id="menu">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="{{ app.url_generator.generate('indexQuadro') }}">Quero criar um quadro</a>
+                        <a href="{{ app.url_generator.generate('index') }}">Quero criar um quadro</a>
                     </li>
                     <li>
-                        <a href="{{ app.url_generator.generate('quadroConsultar') }}">Meus quadros</a>
+                        <a href="{{ app.url_generator.generate('index') }}">Meus quadros</a>
                     </li>
                     <li>
-                        <a href="{{ app.url_generator.generate('indexDica') }}">Dicas</a>
+                        <a href="{{ app.url_generator.generate('index') }}">Dicas</a>
                     </li>
                     <!--<li>
-                        <a href="{{ app.url_generator.generate('indexContato') }}">Contato</a>
+                        <a href="{{ app.url_generator.generate('index') }}">Contato</a>
                     </li>-->
                 </ul>
             </div>
@@ -90,7 +90,7 @@
                 </div>
             </div>
             <div class="row">
-                <center><a href="{{ app.url_generator.generate('indexQuadro') }}"><button class="btn btn-primary" type="submit">Crie seu quadro</button></a></center>
+                <center><a href="{{ app.url_generator.generate('index') }}"><button class="btn btn-primary" type="submit">Crie seu quadro</button></a></center>
                 <br />
                 <br />
             </div>
