Primeiras telas: inicio, nosso impacto, area restrita e contato

--- a/web/view/contato.twig
+++ b/web/view/contato.twig
@@ -4,7 +4,7 @@
 <div class="container">
     <div class="row">
         <div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2">
-            <form name="frmContato" action="{{ path('contatoEnviar')}}" method="POST" class="form-inline">
+            <form name="frmContato" action="" method="POST" class="form-inline">
                 <h4>Quer falar com a gente?</h4>
                 <div class="form-group col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
                     <label for="nome" class="sr-only">Nome</label>
