--- a/web/view/inicio.twig
+++ b/web/view/inicio.twig
@@ -26,31 +26,16 @@
                    </p>
                 </div>
             </div>
-            <div class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1" >
-                <h2>Regras do Jogo</h2>
-                <p>
-                    Escolha tarefas que corrijam ou aperfeiçoem um comportamento.<br />
-                    Reserve um horário, antes de dormir, para conversar e preencher o quadro.<br />
-                    Estabeleça metas semanais e comemore as conquistas. Apresente as consequências também.<br />
-                    Não ceda às pressões. O adulto é você. Cara feia passa, um mau comportamento pode durar a vida toda.<br />
-                    A quantidade de tarefas deve ser próxima à idade da criança até o limite de 8 por dia.<br />
-                </p>
-            </div>
-            <div class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1" >
-                <h2>Veja como funciona</h2>
-                <img class="img-responsive" src="{{ asset('quadro.png', 'img') }}">
-                <br />
-            </div>
         </div>
     </div>    
  {% endblock %}
 
 {% block rodape %}
-<footer class="intro-header" style="background-image: url({{ asset('idealizadores.jpg', 'img') }})">
+<footer class="intro-header">
     <div>
         <h2 style="color:white; text-align:center">Os idealizadores</h2>
-        <h3 style="color:white; text-align:left">&nbsp;João Paulo,<br />&nbsp;pai do Johny,<br />&nbsp;do Dudu, analista de<br />&nbsp;sistemas e escoteiro</h3>
-        <h3 style="color:white; text-align:right">Isabela,&nbsp;<br />mãe da Lena,&nbsp;<br />dançarina e&nbsp;<br />analista de projetos&nbsp;</h3>
+        <h3 style="color:white; text-align:left">&nbsp;João Paulo,<br /></h3>
+        <h3 style="color:white; text-align:right">André</h3>
     </div>
 </footer>
 {% endblock %}
