--- a/web/view/leiaute.twig
+++ b/web/view/leiaute.twig
@@ -5,13 +5,14 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Crie quadros de tarefa, de mesada ou de férias para ajudar na arte que é criar filhos entre 4 e 24 anos">
-    <meta name="keywords" content="quadrinho, quadro, quadro de tarefa, quadro de tarefas, comportamento, mesada, filhos, filhas, crianças, meninos, meninas, regras, autonomia, jogos"/>
+    <meta name="description" content="Onde empreendedores e organizações se encontram">
+    <meta name="keywords" content="impacto social, empreendedorismo, negócio social"/>
     <meta name="robots" content="index, follow">
     <meta name="author" content="jp.trabalho@gmail.com">
+    <meta name="author" content="aaportilho@gmail.com">
 
-    <title>{% block titulo %}BrinqueCoin.com - as moedas da brincadeira{% endblock %}</title>
-
+    <title>{% block titulo %}Social - impacto social na prática{% endblock %}</title>
+    <link rel="shortcut icon" href="{{ asset('favicon.ico', 'img') }}" />
     <!-- Bootstrap Core CSS -->
     <!--<link href="/web/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -21,6 +22,7 @@
     
     <!-- Theme CSS -->
     <link href="{{ asset('clean-blog.css', 'css') }}" rel="stylesheet">
+    <link href="{{ asset('sb-admin-2.css', 'css') }}" rel="stylesheet">
 
     <!-- Form CSS -->
     <link href="{{ asset('form.css', 'css') }}" rel="stylesheet">
@@ -57,17 +59,14 @@
             <div class="collapse navbar-collapse" id="menu">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="{{ app.url_generator.generate('index') }}">Quero criar um quadro</a>
+                        <a href="{{ app.url_generator.generate('impacto') }}">Nosso impacto</a>
                     </li>
                     <li>
-                        <a href="{{ app.url_generator.generate('index') }}">Meus quadros</a>
+                        <a href="{{ app.url_generator.generate('areaRestrita') }}">Área restrita</a>
                     </li>
                     <li>
-                        <a href="{{ app.url_generator.generate('index') }}">Dicas</a>
+                        <a href="{{ app.url_generator.generate('contato') }}">Contato</a>
                     </li>
-                    <!--<li>
-                        <a href="{{ app.url_generator.generate('index') }}">Contato</a>
-                    </li>-->
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -78,21 +77,16 @@
 {% block topo %}
     <!-- Page Header -->
     <!-- Set your background image for this header on the line below. -->
-    <header class="intro-header" style="background-image: url('{{ asset('topo_familia.jpg', 'img') }}')">
+    <header class="intro-header" style="background-image: url('{{ asset('about-bg.jpg', 'img') }}')">
         <div class="container" style="background-color: rgb(0, 0, 0); opacity: 0.5; width: 100%; height: 100%;">
             <div class="row">
                 <div class="col-lg-12 col-lg-offset-0 col-md-12 col-md-offset-0">
                     <div class="site-heading">
-                        <h1>BrinqueCoin</h1>
+                        <h1>Social</h1>
                         <hr class="small">
-                        <span class="subheading">Jogue com seus filhos, organize a rotina e crie filhos responsáveis, confiantes e felizes</span>
+                        <span class="subheading">Impacto social na prática</span>
                     </div>
                 </div>
-            </div>
-            <div class="row">
-                <center><a href="{{ app.url_generator.generate('index') }}"><button class="btn btn-primary" type="submit">Crie seu quadro</button></a></center>
-                <br />
-                <br />
             </div>
         </div>
     </header>
