--- a/web/view/areaRestrita.twig
+++ b/web/view/areaRestrita.twig
@@ -1,56 +1,70 @@
 {% extends 'leiaute.twig' %}
 
 {% block conteudo %}
-<div id="services" class="container-fluid text-center">
-  <h2>Área restrita</h2>
-  <h4>O lugar onde vc cadastra pessoas, ações, turmas, atendimentos</h4>
-  <br>
-  <div class="row slideanim">
-    <a href="/voluntario">
-      <div class="col-sm-4">
-        <span class="glyphicon glyphicon-wrench logo-small"></span>
-        <h4 style="color:#303030;">HARD WORK</h4>
-        <p>Lorem ipsum dolor sit amet..</p>
-      </div>
-    </a>
-    <a href="/responsavel">
-        <div class="col-sm-4">
-            <span class="glyphicon glyphicon-heart logo-small"></span>
-            <h4>Tipos de Ação</h4>
-            <p>Médica, educação, formação profissional, empreendedorismo</p>
-        </div>
-    </a>
-    <a href="/menor">
-        <div class="col-sm-4">
-            <span class="glyphicon glyphicon-lock logo-small"></span>
-            <h4>Tipos de...</h4>
-            <p>...</p>
-        </div>
-    </a>
-  </div>
-  <br><br>
-  <div class="row slideanim">
-      <a href="/acao">
-          <div class="col-sm-4">
-              <span class="glyphicon glyphicon-leaf logo-small"></span>
-              <h4>GREEN</h4>
-              <p>Lorem ipsum dolor sit amet..</p>
-          </div>
-      </a>
-      <a href="/turma">
-          <div class="col-sm-4">
-              <span class="glyphicon glyphicon-certificate logo-small"></span>
-              <h4>CERTIFIED</h4>
-              <p>Lorem ipsum dolor sit amet..</p>
-          </div>
-      </a>
-      <a href="{{ app.url_generator.generate('tipoCadastrar') }}">
-          <div class="col-sm-4">
-              <span class="glyphicon glyphicon-off logo-small"></span>
-              <h4>Configuração</h4>
-              <p>Cadastre os tipos de pessoas ou de ação que o serão usados em outros cadastros...</p>
-          </div>
-      </a>
-  </div>
+<div class="container">
+  <div class="row">
+        <header>
+            <h2><span class="glyphicon glyphicon-tree-deciduous" aria-hidden="true"></span>Área restrita</h2>
+            <span>o lugar para gerenciar pessoas, ações sociais, turmas e atendimentos</span>
+        </header>
+    </div>
+    <br><br>
+    <div class="row slideanim text-center">
+        <a href="/voluntario">
+            <div class="col-sm-4">
+                <span class="glyphicon glyphicon-user fa-2x"></span>
+                <h4 style="color:#303030;">Voluntário</h4>
+                <p>pessoas que prestam o serviço social</p>
+            </div>
+        </a>
+        <a href="/responsavel">
+            <div class="col-sm-4">
+                <span class="glyphicon glyphicon-user fa-2x"></span>
+                <h4>Responsável</h4>
+                <p>adultos atendidos pela instituição ou responáveis por menores de idade</p>
+            </div>
+        </a>
+        <a href="/menor">
+            <div class="col-sm-4">
+                <span class="glyphicon glyphicon-user fa-2x"></span>
+                <h4>Menor</h4>
+                <p>jovens atendidos pela casa</p>
+            </div>
+        </a>
+    </div>
+    <br><br>
+    <div class="row slideanim text-center">
+        <a href="/acao">
+            <div class="col-sm-4">
+                <span class="glyphicon glyphicon-leaf fa-2x"></span>
+                <h4>Ação</h4>
+                <p>ações sociais oferecidas pela instituição</p>
+            </div>
+        </a>
+        <a href="/turma">
+            <div class="col-sm-4">
+                <span class="glyphicon glyphicon-education fa-2x"></span>
+                <h4>Turma</h4>
+                <p>ação social realizada em grupo como aulas, oficinas e palestras</p>
+            </div>
+        </a>
+        <a href="/atendimento">
+            <div class="col-sm-4">
+                <span class="glyphicon glyphicon-usd fa-2x"></span>
+                <h4>Atendimento</h4>
+                <p>ação social individual como atendimentos por médicos, psicólogos, dentistas, advogados ou empreendedores</p>
+            </div>
+        </a>
+    </div>
+    <br><br>
+    <div class="row slideanim text-center">
+        <a href="{{ app.url_generator.generate('tipoCadastrar') }}">
+            <div class="col-sm-4">
+                <span class="glyphicon glyphicon-wrench fa-2x"></span>
+                <h4>Configuração</h4>
+                <p>Cadastre os tipos de pessoas ou de ação que o serão usados em outros cadastros...</p>
+            </div>
+        </a>
+    </div>
 </div>
 {% endblock %}
