--- a/web/view/areaRestrita.twig
+++ b/web/view/areaRestrita.twig
@@ -12,21 +12,21 @@
     <div class="row slideanim text-center">
         <a href="/voluntario">
             <div class="col-sm-4">
-                <span class="glyphicon glyphicon-user fa-2x"></span>
+                <span class="fa fa-vcard-o fa-3x"></span>
                 <h4 style="color:#303030;">Voluntário</h4>
                 <p>pessoas que prestam o serviço social</p>
             </div>
         </a>
         <a href="/responsavel">
             <div class="col-sm-4">
-                <span class="glyphicon glyphicon-user fa-2x"></span>
+                <span class="fa fa-users fa-3x"></span>
                 <h4>Responsável</h4>
                 <p>adultos atendidos pela instituição ou responáveis por menores de idade</p>
             </div>
         </a>
         <a href="/menor">
             <div class="col-sm-4">
-                <span class="glyphicon glyphicon-user fa-2x"></span>
+                <span class="fa fa-user fa-3x"></span>
                 <h4>Menor</h4>
                 <p>jovens atendidos pela casa</p>
             </div>
@@ -36,21 +36,21 @@
     <div class="row slideanim text-center">
         <a href="/acao">
             <div class="col-sm-4">
-                <span class="glyphicon glyphicon-leaf fa-2x"></span>
+                <span class="fa fa-leaf fa-3x"></span>
                 <h4>Ação</h4>
                 <p>ações sociais oferecidas pela instituição</p>
             </div>
         </a>
         <a href="/turma">
             <div class="col-sm-4">
-                <span class="glyphicon glyphicon-education fa-2x"></span>
+                <span class="fa fa-graduation-cap fa-3x"></span>
                 <h4>Turma</h4>
                 <p>ação social realizada em grupo como aulas, oficinas e palestras</p>
             </div>
         </a>
         <a href="/atendimento">
             <div class="col-sm-4">
-                <span class="glyphicon glyphicon-usd fa-2x"></span>
+                <span class="fa fa-user-md fa-3x"></span>
                 <h4>Atendimento</h4>
                 <p>ação social individual como atendimentos por médicos, psicólogos, dentistas, advogados ou empreendedores</p>
             </div>
@@ -60,7 +60,7 @@
     <div class="row slideanim text-center">
         <a href="{{ app.url_generator.generate('tipoCadastrar') }}">
             <div class="col-sm-4">
-                <span class="glyphicon glyphicon-wrench fa-2x"></span>
+                <span class="fa fa-gear fa-3x"></span>
                 <h4>Configuração</h4>
                 <p>Cadastre os tipos de pessoas ou de ação que o serão usados em outros cadastros...</p>
             </div>
